--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
     <canvas></canvas>
     <script src="./Player.js"></script>
+    <script src="./Projectile.js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
