feat: 5. 创建入侵者

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <canvas></canvas>
     <script src="./Player.js"></script>
     <script src="./Projectile.js"></script>
+    <script src="./Invader.js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
