--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="./Player.js"></script>
     <script src="./Projectile.js"></script>
     <script src="./Invader.js"></script>
+    <script src="./Grid.js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
