--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="./Projectile.js"></script>
     <script src="./Invader.js"></script>
     <script src="./Grid.js"></script>
+    <script src="./InvaderProjectile.js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
