feat: 11. 创建背景星星

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="./Grid.js"></script>
     <script src="./InvaderProjectile.js"></script>
     <script src="./Particle.js"></script>
+    <script src="./Start.js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
